Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -398,9 +398,7 @@ nav > details > summary::after {
   font-size: calc(1em * var(--GOLDEN-RATIO));
   border: calc(0.1ch * var(--GOLDEN-RATIO)) solid;
 }
-nav > details > summary::before {
-  position: relative
-}
+nav > details > summary::before { position: relative }
 nav > details > summary::after {
   /* list-style-type: unset; */
   /* position: fixed; */
